src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/*
  Breakpoints:

  320px  -  480px: Mobile devices
  481px  -  768px: iPads, Tablets
  769px  - 1024px: Small screens, laptops
  1025px - 1200px: Desktops, large screens
  1201px and more —  Extra large screens, TV
*/

/* Common variables
 ---------------------------*/
:root {
    --ifm-color-primary: #25c2a0;
    --ifm-color-primary-dark: rgb(33, 175, 144);
    --ifm-color-primary-darker: rgb(31, 165, 136);
    --ifm-color-primary-darkest: rgb(26, 136, 112);
    --ifm-color-primary-light: rgb(70, 203, 174);
    --ifm-color-primary-lighter: rgb(102, 212, 189);
    --ifm-color-primary-lightest: rgb(146, 224, 208);
    --ifm-font-size-base: 1.1rem;
    --ifm-code-font-size: 86%;
    --ifm-pre-line-height: var(--ifm-line-height-base);
    --doc-sidebar-width: 14rem !important;
    --ifm-footer-padding-vertical: calc(var(--ifm-spacing-vertical) * 1.4);

    @media screen and (max-width: 768px) {
        --ifm-menu-link-padding-vertical: 0.5rem;
        --ifm-list-item-margin: 0.5rem;
    }
}

[data-theme='dark']:root {
    --ifm-background-color: #0d1117;
    --ifm-background-surface-color: #161b22;
    --ifm-toc-border-color: #30363d;
    --ifm-code-background: rgba(255, 255, 255, 0.15);
    --ifm-footer-background-color: var(--ifm-background-color);

    --docsearch-key-gradient: linear-gradient(-26.5deg, var(--ifm-color-emphasis-200) 0%,
                                              var(--ifm-color-emphasis-100) 100%);
    --docsearch-text-color: var(--ifm-color-emphasis-700);
}

/* Colors
 ---------------------------*/
.darker {
    color: #888;
}

/* Fonts
 ---------------------------*/
/* Needs postcss-font-format-keywords for format() keyword in the stage1 */
/*
@font-face {
    font-family: 'Scandia-Regular';
    src: url('/fonts/Scandia-Regular.woff2') format('woff2')
         url('/fonts/Scandia-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Scandia-Bold';
    src: url('/fonts/Scandia-Bold.woff2') format('woff2')
         url('/fonts/Scandia-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
}
*/

/* Scrollbars
 ---------------------------*/

::-webkit-scrollbar {
    width: 14px;
    height: 14px;
    background-color: #222526;
}

::-webkit-scrollbar-thumb {
    background-color: #555;
    border-radius: 2px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #777;
}

/* Headings
 ---------------------------*/
h1 {
    --ifm-h1-font-size: 2.1rem !important;
    font-size: var(--ifm-h1-font-size);
}

.markdown > h2 {
    --ifm-h2-font-size: 1.8rem;
}

.hash-link:link,
.hash-link:visited {
    color: var(--ifm-color-info-darker);
}

.hash-link:hover,
.hash-link:active {
    text-decoration: none;
}

/* Navigation
 ---------------------------*/

 /* Left menu */
.menu__link {
    font-size: 0.9rem;

    @media screen and (max-width: 768px) {
        font-size: 1.1rem;
    }
}

.menu__list-item .menu__list-item {
    padding-left: 1.3rem;
}

/* Article content navigation */
.markdown {
    h1 + ul,
    h1 + ul ul {
        list-style-type: none;
    }

    @media screen and (max-width: 768px) {
        h1 + ul li:first-child {
            margin-top: 0.25rem;
        }
    }

    h1 + ul li a {
        font-weight: bold;
    }

    h1 + ul li li a {
        font-weight: normal;
    }

    h1 + ul li a:before {
        content: "# ";
        color: var(--ifm-color-info-darker);
        font-size: 90%;
    }

    h1 + ul li li a:before {
        font-size: 80%;
    }
}

/* Footer
 ---------------------------*/
.footer {
    padding-top: 0.4rem;
    padding-bottom: 0.8rem;
}

/* Code
 ---------------------------*/
.docusaurus-highlight-code-line {
    background-color: rgba(0, 0, 0, 0.1);
    display: block;
    margin: 0 calc(-1 * var(--ifm-pre-padding));
    padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] {
    .docusaurus-highlight-code-line {
        background-color: rgba(0, 0, 0, 0.3);
    }

    .prism-code {
        background-color: #20222b !important;
    }
}

/* Images
 ---------------------------*/
img.no-blurry {
    will-change: transform;
}

/* Prism syntax highlighting
 ---------------------------*/
.prism-code {
    .token {
        font-style: inherit !important;
    }
}

/* Table of Contents
 ---------------------------*/
.table-of-contents {
    font-size: 0.7rem;
}

main > .container > .row > .col:last-child > div[class^='tableOfContents_'] {
    transition: top 0.2s ease 0s;
}

nav[class*='navbarHidden_']
~ .main-wrapper main > .container > .row > .col:last-child > div[class^='tableOfContents_'] {
    top: 1rem;
}

/* APITable Component
 ---------------------------*/
.apitable-build-options {
    /* Represents first two elements. [=-0+2, -1+2] */
    td:nth-child(-n+2) {
        vertical-align: top;
    }

    td:nth-child(2) {
        text-align: center;
    }
}

#apitable-c-macros td:first-child {
    vertical-align: top;
}

#apitable-dropping-indexes {
    th:last-child {
        width: 50%;
    }

    td:first-child {
        font-size: 90%;
        overflow-wrap: anywhere;
    }
}

/* RootFolderInput Component inside Tabs Component
 ---------------------------*/
.tiny-tree {
    position: relative;
}

.tiny-root-folder-info-wrapper {
    position: absolute;
    top: 13px;
    left: 15px;
    z-index: 10;

    .tiny-root-folder-info-prefix {
        color: var(--ifm-color-warning-lighter);
    }
}

html[data-theme='dark'] .tiny-root-folder-info-wrapper .tiny-root-folder-info-prefix {
    color: var(--ifm-color-warning-lightest);
}

/* Schema builder - Available Column Types
 ---------------------------*/
#collection-method-list {
    & > p {
        column-count: 3;
        column-gap: 2em;
    }

    @media screen and (max-width: 480px) {
        & > p {
            column-count: 2;
        }
    }

    a {
        display: block;
    }
}

#collection-methods, #supported-compilers {
    & > h4 {
        margin-top: 2rem;
    }

    & > h4 > code {
        color: var(--ifm-link-color);
    }
}

#supported-compilers {
    margin-bottom: 2rem;
}

